--- a/index.html
+++ b/index.html
@@ -38,21 +38,23 @@
 
 
 
-    <div class="container">
 
-        <br>
-        <ul class="btn btn-warning btn-sm"><a href="game.html">GAME</a></ul>
-        <br>
-        <ul class="btn btn-warning btn-sm"><a href="about.html">ABOUT</a></ul>
-        <br>
-        <ul class="btn btn-warning btn-sm"><a href="help.html">HELP</a></ul>
-        <br>
-        <ul class="btn btn-warning btn-sm"><a href="index.html">EXIT</a></ul>
-        <br>
-        <br>
+
+    <div class="container">
+        <div class="alert alert-warning" role="alert">
+            <center> <a href="game.html" target="_blank" class="alert-link">GAME</a>.</center>
+        </div>
+        <div class="alert alert-info" role="alert">
+            <center> <a href="about.html" target="_blank" class="alert-link">ABOUT</a>.</center>
+        </div>
+        <div class="alert alert-success" role="alert">
+            <center> <a href="help.html" target="_blank" class="alert-link">HELP</a>.</center>
+        </div>
+        <div class="alert alert-danger" role="alert">
+            <center> <a href="index.html" target="_blank" class="alert-link">EXIT</a>.</center>
+        </div>
 
     </div>
-
 
 </body>
 
