--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 
     <div class="container">
         <div class="alert alert-warning" role="alert">
-            <center> <a href="game.html" target="_blank" class="alert-link">GAME</a>.</center>
+            <center> <a href="game.html" class="alert-link">GAME</a>.</center>
         </div>
         <div class="alert alert-info" role="alert">
-            <center> <a href="about.html" target="_blank" class="alert-link">ABOUT</a>.</center>
+            <center> <a href="about.html" class="alert-link">ABOUT</a>.</center>
         </div>
         <div class="alert alert-success" role="alert">
-            <center> <a href="help.html" target="_blank" class="alert-link">HELP</a>.</center>
+            <center> <a href="help.html" class="alert-link">HELP</a>.</center>
         </div>
         <div class="alert alert-danger" role="alert">
-            <center> <a href="index.html" target="_blank" class="alert-link">EXIT</a>.</center>
+            <center> <a href="index.html" class="alert-link">EXIT</a>.</center>
         </div>
 
     </div>
