--- a/help.html
+++ b/help.html
@@ -38,6 +38,9 @@
                     <p>HELP: The Game is a project which brings together the top developers, <br> studios and gaming industry superstars <br> - all to raise money for children in war.</p>
                     <p class="lead">
                         <a class="btn btn-primary btn-lg" href="game.html" role="button">GAME</a>
+                        <input type="button" value="GAME">BACK</a>
+                        </button>
+
                     </p>
                 </div>
             </div>
@@ -64,7 +67,9 @@
                     hand then you can choose to either hit or stand for each hand accordingly.</p>
                 <p><strong>Betting</strong> Bets must be placed prior to playing. After receiving your first 2 cards, you can choose to double down (double your original bet). After your next move, you can no longer choose to double down.</p>
                 <p><strong>Payout</strong> Payout is 1:1 unless you get a blackjack. For a blackjack, payout is 3:2.</p>
-                <button id="rules-close"><a href="index.html" class="btn btn-info">back</a></button>
+                <button id="rules-close"><a href="index.html" class="btn btn-info">
+
+                <input type="button" value="GAME">BACK</a></button>
             </div>
         </div>
     </div>
