--- a/index.html
+++ b/index.html
@@ -42,18 +42,32 @@
 
     <div class="container">
         <div class="alert alert-warning" role="alert">
-            <center> <a href="game.html" class="alert-link">GAME</a>.</center>
+            <center>
+                <a href="game.html" class="alert-link">
+
+                    <input type="button" value="GAME"></a>
+            </center>
         </div>
         <div class="alert alert-info" role="alert">
-            <center> <a href="about.html" class="alert-link">ABOUT</a>.</center>
+            <center>
+                <a href="about.html" class="alert-link">
+                    <input type="button" value="ABOUT"></a>
+            </center>
         </div>
         <div class="alert alert-success" role="alert">
-            <center> <a href="help.html" class="alert-link">HELP</a>.</center>
+            <center>
+                <a href="help.html" class="alert-link">
+                    <input type="button" value="HELP"></a>
+            </center>
         </div>
         <div class="alert alert-danger" role="alert">
-            <center> <a href="index.html" class="alert-link">EXIT</a>.</center>
-        </div>
+            <center>
+                <a href="index.html" class="alert-link">
 
+                    <input type="button" value="EXIT"></a>
+            </center>
+        </div>
+        `
     </div>
 
 </body>
