--- a/about.html
+++ b/about.html
@@ -34,6 +34,11 @@
                     <h5>TarQuin Farquharson</h5>
                     <p class="lead">
                         <a class="btn btn-primary btn-lg" href="index.html" role="button">GAME</a>
+
+                        <center>
+                            <button onclick="myhome()">HOME</button>
+
+                        </center>
                     </p>
                 </div>
             </div>
@@ -41,10 +46,34 @@
     </div>
 
     <div class="container">
-        <center> <button class="btn btn-warning"><a href="./exit.html">EXIT</a></button></center>
+
+        <center>
+            <button onclick="myhome()">HOME</button>
+
+        </center>
     </div>
-    <script src="blackjack.js"></script>
 
-</body>
+    <script>
+        function mygFunc() {
+            window.location.href = "index.html";
 
-</html>
+        }
+    </script>
+
+    <script>
+        function myhome() {
+            window.location.href = "exit.html";
+
+
+        }
+
+        <
+        script src = "blackjack.js" >
+            <
+            />
+
+        <
+        /body>
+
+        <
+        /html>
