--- a/game.html
+++ b/game.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="blackjack.css">
     <title>BlackJack Game</title>
 </head>
+<style>
+    button {
+        color: rgb(248, 245, 255);
+        background-color: rgb(153, 117, 34);
+        border-radius: 1px 2px;
+        font-size: 20px;
+    }
+    
+    button:hover {
+        background-color: red;
+        color: wheat;
+        border: 1px solid darkblue;
+    }
+</style>
 
 <body>
     <div class="container-1">
@@ -48,14 +62,50 @@
 
 
         <div class="container">
-            <center> <button class="btn btn-warning"><a href="./exit.html">EXIT</a></button>
-                <button class="btn btn-warning"><a href="./help.html">HELP</a></button>
-                <button class="btn btn-warning"><a href="./about.html">ABOUT</a></button>
-
+            <center>
+                <button onclick="myFunc()">ABOUT</button>
+                <button onclick="myhFunc()">HELP</button>
+                <button onclick="myeFunc()">EXIT</button>
             </center>
         </div>
 
     </div>
+
+
+
+
+
+    <script>
+        function myFunc() {
+            window.location.href = "about.html";
+
+
+        }
+    </script>
+
+    <script>
+        function mygFunc() {
+            window.location.href = "game.html";
+
+
+        }
+    </script>
+
+    <script>
+        function myhFunc() {
+            window.location.href = "help.html";
+
+
+        }
+    </script>
+
+    <script>
+        function myeFunc() {
+            window.location.href = "exit.html";
+
+
+        }
+    </script>
 
     <script src="blackjack.js"></script>
 </body>
