--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         a {
             font-size: 20px;
         }
+        
+        button {
+            color: rgb(248, 245, 255);
+            background-color: rgb(153, 117, 34);
+            border-radius: 1px 2px;
+            font-size: 20px;
+        }
+        
+        button:hover {
+            background-color: red;
+            color: wheat;
+            border: 1px solid darkblue;
+        }
     </style>
 </head>
 
