--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             background-color: gray;
             font-family: Arial, Helvetica, sans-serif;
             font-weight: 700;
+            background: rgb(0, 31, 36);
+            background: -moz-linear-gradient(90deg, rgba(0, 31, 36, 1) 0%, rgba(26, 131, 4, 0.5499241933101365) 99%, rgba(154, 13, 152, 0.4995040252429097) 100%);
+            background: -webkit-linear-gradient(90deg, rgba(0, 31, 36, 1) 0%, rgba(26, 131, 4, 0.5499241933101365) 99%, rgba(154, 13, 152, 0.4995040252429097) 100%);
+            background: linear-gradient(90deg, rgba(0, 31, 36, 1) 0%, rgba(26, 131, 4, 0.5499241933101365) 99%, rgba(154, 13, 152, 0.4995040252429097) 100%);
+            filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#001f24", endColorstr="#9a0d98", GradientType=1);
         }
         
         ul {
@@ -35,7 +40,7 @@
             background-color: rgb(86, 34, 153);
             text-shadow: 1px 1px rgb(163, 33, 33);
             border-radius: 30px;
-            font-size: 20px;
+            font-size: 40px;
         }
         
         button:hover {
